working main file generation

--- a/tex/input/style.sty
+++ b/tex/input/style.sty
@@ -62,7 +62,7 @@
 \Large\@author\ (\@studentno)}\\[.5cm]
 {\large\sffamily at the}
 \vfill
-\resizebox{.6\linewidth}{!}{\includegraphics{figures/unisignet.pdf}}\\[.4cm]
+\resizebox{.6\linewidth}{!}{\includegraphics{figures/logo.pdf}}\\[.4cm]
 \vfill
 {\large\sffamily\@group~Group}\\[.5cm]
 {\large\sffamily Department of \@department}\\[1cm]
