--- a/tex/input/main.tex
+++ b/tex/input/main.tex
@@ -1,5 +1,6 @@
 \documentclass[SETTING_FONTSIZE, paper=SETTING_PAPERSIZE, parskip, oneside]{scrreprt}
 \usepackage[T1]{fontenc}
+\usepackage[settings]{markdown} % Markdown package for including markdown files
 \usepackage[utf8]{inputenc}
 \usepackage{style}
 \usepackage{subcaption}
