update setting handling

--- a/input/main.tex
+++ b/input/main.tex
@@ -12,11 +12,12 @@
 \title{SETTING_TITLE} % Your title
 #IF_SETTING_TYPE#\type{SETTING_TYPE} % Seminar to the Bachelor/Master Project | Bachelor/Master Project Report
 \author{SETTING_AUTHOR} % Your name
-#IF_SETTING_STUDENTNR#\studentno{SETTING_STUDENTNR} % Your student number
-#IF_SETTING_GROUP#\group{SETTING_GROUP} % Your group
-#IF_SETTING_DEPARTMENT#\department{SETTING_DEPARTMENT} % Your department
-#IF_SETTING_ADVISOR#\advisor{SETTING_ADVISOR} % Your advisor
-#IF_SETTING_REVIEWER#\reviewer{SETTING_REVIEWER} % Your reviewer
+\studentno{SETTING_STUDENTNR} % Your student number
+\group{SETTING_GROUP} % Your group
+\department{SETTING_DEPARTMENT} % Your department
+\advisor{SETTING_ADVISOR} % Your advisor
+\reviewer{SETTING_REVIEWER} % Your reviewer
+\city{SETTING_CITY} % Your city
 \date{\the\day .~\monthname~\the\year}
 
 % ============= Abstract =============
