use more markdown lib features

--- a/input/main.tex
+++ b/input/main.tex
@@ -1,6 +1,6 @@
 \documentclass[SETTING_FONTSIZE, paper=SETTING_PAPERSIZE, parskip, oneside]{scrreprt}
 \usepackage[T1]{fontenc}
-\usepackage[hybrid]{markdown} % Markdown package for including markdown files
+\usepackage[citations, linkAttributes, pipeTables, relativeReferences, tableAttributes, tableCaptions]{markdown} % Markdown package for including markdown files
 \usepackage[utf8]{inputenc}
 \usepackage{style}
 #IF_SETTING_BIBFILE#\usepackage{biblatex}
