feat: enhance settings management and markdown support
- Added a new Settings component for better handling of boolean and text inputs.
- Updated LaTeX document to include additional packages for markdown and bibliography.
- Modified database schema to include an 'isBoolean' field in style settings.
- Improved functions to find and manage settings, including distinguishing between string and boolean types.
- Refactored file upload logic to streamline the extraction of settings from uploaded files.
```

--- a/input/basic.tex
+++ b/input/basic.tex
@@ -1,13 +1,25 @@
 \documentclass[12pt, paper=a4, parskip, oneside]{scrreprt}
 \usepackage[T1]{fontenc}
-\usepackage[hybrid]{markdown}
-\usepackage[utf8]{inputenc}
-\usepackage[english]{babel}
 
-\date{\the\day .~\monthname~\the\year}
+%%%%%
+
+% inlcude packages:
+\usepackage[utf8]{inputenc}
+\usepackage{silence} % Filter warnings
+\usepackage[citations, linkAttributes, pipeTables, relativeReferences,inlineNotes=true, tableAttributes, tableCaptions, smartEllipses, rawAttribute, fencedCode, startNumber=false, fancyLists=true, tightLists=false, underscores=false,superscripts]{markdown} % Markdown package for including markdown files
+\usepackage{biblatex}
+\usepackage[english, ngerman]{babel} % Spell checking (Using ngerman for german spell checking). The last language is the standard language for the document.
+
+\addbibresource{bibliography.bib}
+
+%%%%%
+
+\date{\the\day .~\monthname~\the\year} % Place date command before \begin{document}
 
 \begin{document}
 
 #INCLUDE_CHAPTERS
+
+\printbibliography
 
 \end{document}
